fix footer icon spacing

--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -107,6 +107,6 @@ i {
   }
 
   .social-media-mobile {
-    margin: 0 auto !important;
+    margin: 1em auto !important;
   }
 }
